# SoundSpell

./: .gitignore  Dockerfile  docker-compose.yml
backend/: database.py  main.py  models.py  pyproject.toml
ui/: Dockerfile  metadata.json  package-lock.json  package.json  tailwind.config.ts
ui/docs/: blueprint.md
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/auth/: page.tsx
ui/src/app/lib/: placeholder-images.json
ui/src/app/parent/: page.tsx
ui/src/app/student/: page.tsx
ui/src/components/: PhonicsReader.module.css  PhonicsReader.tsx
